name:                ChromVAR
version:             0.0.1
synopsis:            ChromVAR
description:         ChromVAR
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2020 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:
  README.md
  ChangeLog.md

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall

  exposed-modules:     Bio.ChromVAR
                       Bio.ChromVAR.Background
                       Bio.ChromVAR.Utils

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bioinformatics-toolkit >= 0.9.1
                     , containers
                     , conduit
                     , eigen
                     , matrices
                     , statistics
                     , vector
                     , mwc-random
                     , singletons
  default-language:    Haskell2010

executable chromvar
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  build-depends:       base
                     , ChromVAR
                     , optparse-applicative

  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  other-modules:

  default-language:    Haskell2010
  build-depends:
      base
    , bioinformatics-toolkit
    , conduit
    , eigen
    , mwc-random
    , tasty
    , tasty-hunit
    , statistics
    , ChromVAR
    , vector

source-repository head
  type:     git
  location: https://github.com/Taiji-pipeline/Taiji.git